--- a/typst.toml
+++ b/typst.toml
@@ -1,6 +1,7 @@
 [package]
 name = "qec-thrust"
 version = "0.1.0"
+compiler = "0.13.0"
 entrypoint = "lib.typ"
 repository = "https://github.com/nzy1997/qec-thrust"
 authors = [
